add wrapper for map estimates

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(create_cov_object)
 export(pregenerate_iiv)
 export(pregenerate_ruv)
 export(round_to_multiple)
+export(simulate_fit)
 importFrom(PKPDmap,create_iov_object)
 importFrom(PKPDmap,get_map_estimates)
 importFrom(PKPDsim,get_var_y)
