--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,8 +4,8 @@ export(calc_auc_from_sim)
 export(collect_tdms)
 export(create_cov_object)
 export(dose_grid_search)
-export(pregenerate_iiv)
-export(pregenerate_ruv)
+export(generate_iiv)
+export(generate_ruv)
 export(round_to_multiple)
 export(simulate_fit)
 export(update_regimen)
