wrapper for dose adjustment

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(dose_grid_search)
 export(generate_iiv)
 export(generate_ruv)
 export(round_to_multiple)
+export(sample_and_adjust_by_dose)
 export(simulate_fit)
 export(update_regimen)
 importFrom(PKPDmap,create_iov_object)
