--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,12 +4,14 @@ Version: 0.0.0.1
 Authors@R: c(
     person("Jasmine", "Hughes", email = "jasmine@insight-rx.com", role = c("aut", "cre")),
     person("InsightRX", role = c("cph", "fnd")))
+Author: Jasmine Hughes
+Maintainer: Jasmine Hughes <jasmine@insight-rx.com>
 Description: Functions for simulating dose adjustments given PKPD models, 
     sampling times, covariate distributions, etc.
 License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.2.3
+RoxygenNote: 7.3.1
 Suggests: 
     dplyr,
     ggplot2,
