add helper function for defining targets

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,9 +3,11 @@
 export(calc_auc_from_sim)
 export(collect_tdms)
 export(create_cov_object)
+export(create_target_object)
 export(dose_grid_search)
 export(generate_iiv)
 export(generate_ruv)
+export(mipd_target_types)
 export(round_to_multiple)
 export(sample_and_adjust_by_dose)
 export(simulate_fit)
