--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(calc_auc_from_sim)
 export(collect_tdms)
 export(create_cov_object)
 export(create_target_object)
+export(dose_adjust_map)
 export(dose_grid_search)
 export(generate_iiv)
 export(generate_ruv)
