add variable samplling times

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(calc_auc_from_regimen)
 export(calc_auc_from_sim)
 export(collect_tdms)
 export(create_cov_object)
+export(create_sampling_scheme)
 export(create_target_object)
 export(dose_adjust_map)
 export(dose_grid_search)
