--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(dose_adjust_map)
 export(dose_grid_search)
 export(generate_iiv)
 export(generate_ruv)
+export(get_sampling_times_from_scheme)
 export(is_on_target)
 export(mipd_target_types)
 export(model_based_starting_dose)
