--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ export(dose_grid_search)
 export(generate_iiv)
 export(generate_ruv)
 export(get_sampling_times_from_scheme)
+export(interval_adjust_map)
 export(is_on_target)
 export(mipd_target_types)
 export(model_based_starting_dose)
