--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,12 +4,14 @@ export(calc_auc_from_regimen)
 export(calc_auc_from_sim)
 export(collect_tdms)
 export(create_cov_object)
+export(create_regimen_update_scheme)
 export(create_sampling_scheme)
 export(create_target_object)
 export(dose_adjust_map)
 export(dose_grid_search)
 export(generate_iiv)
 export(generate_ruv)
+export(get_dose_update_numbers_from_scheme)
 export(get_sampling_times_from_scheme)
 export(interval_adjust_map)
 export(is_on_target)
