--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,12 +6,14 @@ export(collect_tdms)
 export(create_cov_object)
 export(create_target_object)
 export(dose_adjust_map)
+export(dose_adjust_nca)
 export(dose_grid_search)
 export(generate_iiv)
 export(generate_ruv)
 export(is_on_target)
 export(mipd_target_types)
 export(model_based_starting_dose)
+export(perform_nca)
 export(round_to_multiple)
 export(sample_and_adjust_by_dose)
 export(simulate_fit)
