updates interval adapt; add vignette

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,14 +7,14 @@ export(create_cov_object)
 export(create_regimen_update_scheme)
 export(create_sampling_scheme)
 export(create_target_object)
-export(dose_adjust_map)
 export(dose_grid_search)
 export(generate_iiv)
 export(generate_ruv)
 export(get_dose_update_numbers_from_scheme)
 export(get_sampling_times_from_scheme)
-export(interval_adjust_map)
 export(is_on_target)
+export(map_adjust_dose)
+export(map_adjust_interval)
 export(mipd_target_types)
 export(model_based_starting_dose)
 export(round_to_multiple)
