misc naming updates / cleanup / update vignette

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,8 +4,9 @@ export(calc_auc_from_regimen)
 export(calc_auc_from_sim)
 export(collect_tdms)
 export(create_cov_object)
-export(create_regimen_update_scheme)
-export(create_sampling_scheme)
+export(create_regimen_update_design)
+export(create_sampling_design)
+export(create_target_design)
 export(create_target_object)
 export(dose_grid_search)
 export(generate_iiv)
