--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(create_cov_object)
 export(create_target_object)
 export(dose_adjust_map)
 export(dose_adjust_nca)
+export(dose_from_auc)
 export(dose_grid_search)
 export(generate_iiv)
 export(generate_ruv)
