address R CMD check NOTEs

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -37,5 +37,6 @@ importFrom(stats,lm)
 importFrom(stats,predict)
 importFrom(stats,qnorm)
 importFrom(stats,rnorm)
+importFrom(stats,runif)
 importFrom(stats,setNames)
 importFrom(utils,tail)
