--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(calc_auc_from_regimen)
 export(calc_auc_from_sim)
 export(collect_tdms)
 export(create_cov_object)
+export(create_model_design)
 export(create_regimen_update_design)
 export(create_sampling_design)
 export(create_target_design)
@@ -18,6 +19,7 @@ export(map_adjust_interval)
 export(mipd_target_types)
 export(model_based_starting_dose)
 export(round_to_multiple)
+export(run_trial)
 export(sample_and_adjust_by_dose)
 export(simulate_fit)
 export(update_regimen)
