--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(create_model_design)
 export(create_regimen_update_design)
 export(create_sampling_design)
 export(create_target_design)
+export(create_trial_design)
 export(dose_grid_search)
 export(generate_iiv)
 export(generate_ruv)
