minor fixes; also return MAP GOF data

--- a/inst/md/example1.yaml
+++ b/inst/md/example1.yaml
@@ -18,6 +18,6 @@ designs:
     update_type: dose
     dose_optimization_method: map_adjust_dose
   sim:
-    lib: pkvancouvm
+    lib: pkvancothomson
   est:
-    lib: pkvancouvm
+    lib: pkvancothomson
