--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(calc_auc_from_sim)
 export(calc_concentration_from_regimen)
 export(collect_tdms)
 export(create_cov_object)
+export(create_initial_regimen_design)
 export(create_model_design)
 export(create_regimen_update_design)
 export(create_sampling_design)
