weight based dosing nomogram, modernize bu case study

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,6 +26,7 @@ export(run_trial)
 export(sample_and_adjust_by_dose)
 export(simulate_fit)
 export(update_regimen)
+export(weight_based_starting_dose)
 importFrom(PKPDmap,create_iov_object)
 importFrom(PKPDmap,get_map_estimates)
 importFrom(PKPDsim,get_var_y)
