address failing tests

--- a/inst/md/example1.yaml
+++ b/inst/md/example1.yaml
@@ -2,7 +2,7 @@ name: test
 description: try out the functionality
 designs:
   initial_regimen:
-    function: model_based_starting_dose
+    method: model_based_starting_dose
   target:
     targettype: auc24
     targetmin: 400
