use different package for unit tests

--- a/inst/md/example1.yaml
+++ b/inst/md/example1.yaml
@@ -20,6 +20,6 @@ designs:
     update_type: dose
     dose_optimization_method: map_adjust_dose
   sim:
-    lib: pkvancothomson
+    lib: pkbusulfanmccune
   est:
-    lib: pkvancothomson
+    lib: pkbusulfanmccune
