--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -23,6 +23,7 @@ Suggests:
 Config/testthat/edition: 3
 Imports: 
     PKPDmap,
-    PKPDsim
+    PKPDsim,
+    yaml
 Remotes: InsightRX/PKPDsim, InsightRX/PKPDmap
 VignetteBuilder: knitr
