--- a/NAMESPACE
+++ b/NAMESPACE
@@ -40,5 +40,9 @@ importFrom(stats,lm)
 importFrom(stats,predict)
 importFrom(stats,qnorm)
 importFrom(stats,rnorm)
+importFrom(stats,runif)
 importFrom(stats,setNames)
+importFrom(utils,setTxtProgressBar)
 importFrom(utils,tail)
+importFrom(utils,txtProgressBar)
+importFrom(yaml,read_yaml)
