--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -19,7 +19,8 @@ Suggests:
     knitr,
     rmarkdown,
     testthat (>= 3.2.0),
-    tidyr
+    tidyr,
+    cli
 Config/testthat/edition: 3
 Imports: 
     PKPDmap,
