--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -20,7 +20,11 @@ Suggests:
     rmarkdown,
     testthat (>= 3.2.0),
     tidyr,
-    cli
+    cli,
+    purrr,
+    furrr,
+    future,
+    progressr
 Config/testthat/edition: 3
 Imports: 
     PKPDmap,
