rollback change in variable name

--- a/.github/workflows/pkgdown.yml
+++ b/.github/workflows/pkgdown.yml
@@ -34,11 +34,7 @@ jobs:
 
       - uses: r-lib/actions/setup-r-dependencies@v2
         with:
-          pak-version: devel
-          extra-packages:
-            any::pkgdown
-            local::.
-            InsightRX/PKPDsim
+          extra-packages: any::pkgdown, local::.
           needs: website
 
       - name: Build site
