add parallel running

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -27,6 +27,7 @@ export(model_based_starting_dose)
 export(round_to_multiple)
 export(run_trial)
 export(sample_and_adjust_by_dose)
+export(sim_subject)
 export(simulate_fit)
 export(update_regimen)
 export(weight_based_starting_dose)
