--- a/.github/workflows/pkgdown.yml
+++ b/.github/workflows/pkgdown.yml
@@ -30,6 +30,7 @@ jobs:
 
       - uses: r-lib/actions/setup-r@v2
         with:
+          r-version: release-4.4.3
           use-public-rspm: true
 
       - uses: r-lib/actions/setup-r-dependencies@v2
