silent error get_single_target_design, add dose_grid_search and exposre metrics for time targets

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 export(calc_auc_from_regimen)
 export(calc_auc_from_sim)
 export(calc_concentration_from_regimen)
+export(calc_tgt_from_regimen)
 export(calc_time_to_target)
 export(collect_tdms)
 export(create_cov_object)
